welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: ')' expected but '.' found.
  for (i<-0 to lenght T.lenght-1){
                       ^Array1:24: error: illegal start of simple expression
} 
^